--- a/app/static/css/module-buttons.css
+++ b/app/static/css/module-buttons.css
@@ -19,14 +19,18 @@ add				- blue
 /* .butt: Base button styling */
 .butt {
 	cursor: pointer;
-	border-width: 1.5px;
+	border-width: 2.5px;
 	border-style: solid;
-	border-color: #bcbdbd;
 	border-radius: 4px;
+/* 	border-color: #bcbdbd;
 	background-color: #fff;
-	color: #58595b;
+	color: #58595b; */
+	border-color: #bcbdbd;
+	background-color: #bcbdbd;
+	color: #f8f9fa;
 	font-size: 1.25rem;
 	padding: .25rem 1rem;
+	transition: .2s;
 }
 
 	.butt a {
@@ -40,8 +44,8 @@ add				- blue
 
 	.butt:active {
 		border-color: #bcbdbd;
-		background-color: #58595b;
-		color: #f4f4f4;
+		background-color: #f8f9fa;
+		color: #58595b;
 	}
 
 
@@ -55,36 +59,40 @@ add				- blue
 
 /* .butt--create: Used for submit/create buttons */
 .butt--create {
-	border-color: #b8dd9b;
-	color: #88c659;
+	background-color: #b8dd9b !important;
+	border-color: #b8dd9b !important;
+	color: #f8f9fa !important;
 }
 
 	.butt--create:hover {
-		border-color: #88c659;
+		color: #f8f9fa !important;
+		border-color: #88c659 !important;
 	}
 
 	.butt--create:active {
-		border-color: #b8dd9b;
-		background-color: #88c659;
+		border-color: #b8dd9b !important;
+		background-color: #f8f9fa !important;
+		color: #88c659 !important;
 	}
 
 
 
 /* .butt--delete: Used for delete/cancel buttons */
 .butt--delete, .butt--delete a {
+	background-color: #f1a69b !important;
 	border-color: #f1a69b !important;
-	color: #e76a58 !important;
-	vertical-align: inherit;
+	color: #f8f9fa;
 }
 
 	.butt--delete:hover, .butt--delete a:hover {
-		color: #e76a58 !important;
+		color: #f8f9fa !important;
 		border-color: #e76a58 !important;
 	}
 
 	.butt--delete:active {
 		border-color: #f1a69b !important;
-		background-color: #e76a58 !important;
+		background-color: #f8f9fa !important;
+		color: #e76a58 !important;
 	}
 
 
@@ -100,28 +108,33 @@ add				- blue
 	.butt--delete-icon:hover {
 		color: #e76a58 !important;
 		border: none;
+		background-color: transparent;
 	}
 
 	.butt--delete-icon:active {
 		border-color: #f1a69b !important;
 		border: none;
+		background-color: transparent;
 	}
 
 
 
 /* .butt--edit: Used for edit buttons */
 .butt--edit {
-	border-color: #ffe491;
-	color: #ffd248;
+	border-color: #ffe491 !important;
+	background-color: #ffe491 !important;
+	color: #8A8F8F !important;
 }
 
 	.butt--edit:hover {
-		border-color: #ffd248;
+		border-color: #ffd248 !important;
+		color: #8A8F8F !important;
 	}
 
 	.butt--edit:active {
-		border-color: #ffe491;
-		background-color: #ffd248;
+		border-color: #ffe491 !important;
+		background-color: #f8f9fa !important;
+		color: #ffd248 !important;
 	}
 
 
@@ -129,16 +142,19 @@ add				- blue
 /* .butt--add: Used for add buttons */
 .butt--add {
 	border-color: #a1d3ff;
-	color: #62b5ff;
+	background-color: #a1d3ff;
+	color: #f8f9fa;
 }
 
 	.butt--add:hover {
 		border-color: #62b5ff;
+		color: #f8f9fa;
 	}
 
 	.butt--add:active {
 		border-color: #a1d3ff;
-		background-color: #62b5ff;
+		background-color: #f8f9fa;
+		color: #62b5ff;
 	}
 
 
