Change cancel button to a role="button"

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -720,7 +720,7 @@
 				<div class="js-submit-div">
 					<div class="[ row justify-content-center ]">
 						<div class="[ col text-right py-4 ]">
-							<button id="js-cancel_create" class="js-cancel-form butt butt--delete" type="button"><a href="{{ url_for('home') }}">Cancel</a></button>
+							<a id="js-cancel_create" class="js-cancel-form butt butt--delete [ btn btn-sm ]" role="button" href="{{ url_for('home') }}">Cancel</a>
 							<button id="js-post_create" class="js-post-form butt butt--create [ ml-2 ]" type="button" value="Create">Create</button>
 						</div>
 					</div>
