Left-align Exhibitions head

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -133,10 +133,10 @@
 
 
 	<section id="section--exhibitions">
-		<div class="chunk [ row justify-content-center py-4 ]">
+		<div class="chunk [ row justify-content-center py-5 ]">
 
 			<div class="[ col-md-8 ]">
-				<h2 class="text-center display-4 p-4">Exhibitions</h2>
+				<h2 class="[ display-4 py-4 ]">Exhibitions</h2>
 			</div>
 
 			<div class="[ col-md-8 ]">
