Add .head__h1 styling

--- a/app/templates/artwork_delete.html
+++ b/app/templates/artwork_delete.html
@@ -11,7 +11,7 @@
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
 			<div class="[ col-md-8 ]">
-				<h1 class="[ text-center display-3 ]"><b>{{ artwork.name|upper }}</b></h1>
+				<h1 class="head__h1 head__h1--artworks [ text-center display-3 ]"><b>{{ artwork.name|upper }}</b></h1>
 			</div>
 		</div>
 	</section>
