--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -12,7 +12,7 @@
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
 			<div class="[ col-md-8 ]">
-				<h1 class="[ text-center display-3 ]"><b>EXHIBITIONS</b></h1>
+				<h1 class="head__h1 head__h1--exhibitions [ text-center display-3 ]"><b>EXHIBITIONS</b></h1>
 			</div>
 		</div>
 	</section>
