Add .required border-color

--- a/app/static/css/module-forms.css
+++ b/app/static/css/module-forms.css
@@ -33,6 +33,7 @@ input { color: #58595b }
 /* Class applied to required form labels */
 .required {
   font-weight: bold;
+  border-color: #e76a58;
 }
 
 
