--- a/app/templates/include/nav.html
+++ b/app/templates/include/nav.html
@@ -6,13 +6,13 @@
       </button>
       <div class="site-nav__menu [ dropdown-menu w-100 border-0 ]" aria-labelledby="dropdownMenuButton">
         <ul class="[ p-0 m-0 ]">
-          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('home') }}">Home</a></div>
-          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('exhibitions') }}">Exhibitions</a></div>
-          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('parks') }}">Parks</a></div>
-          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('artists') }}">Artists</a></div>
-          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('artworks') }}">Artworks</a></div>
-          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('orgs') }}">Orgs</a></div>
-          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('create') }}">Create</a></div>
+          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('home') }}"><span class="site-nav__link-text">Home</span></a></div>
+          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('exhibitions') }}"><span class="site-nav__link-text">Exhibitions</span></a></div>
+          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('parks') }}"><span class="site-nav__link-text">Parks</span></a></div>
+          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('artists') }}"><span class="site-nav__link-text">Artists</span></a></div>
+          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('artworks') }}"><span class="site-nav__link-text">Artworks</span></a></div>
+          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('orgs') }}"><span class="site-nav__link-text">Orgs</span></a></div>
+          <div class="site-nav__link [ dropdown-item ]"><a href="{{ url_for('create') }}"><span class="site-nav__link-text">Create</span></a></div>
         </ul>
       </div>
     </div>
