--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -83,7 +83,7 @@
 									{{ form.website.label }}
 								</div>
 								<div class="[ col-md-6 ]">
-									<p class="is-active [ m-0 ]">{% if artist.website %}<a href="http://{{ artist.website }}" class="is-active">{{ artist.website }}</a>{% else %}None{% endif %}</p>
+									<p class="is-active [ m-0 ]">{% if artist.website %}<a href="http://{{ artist.website }}" class="is-active" target="_blank">{{ artist.website }}</a>{% else %}None{% endif %}</p>
 									{{ form.website(class="form-control-plaintext d-none", value=artist.website) }}
 								</div>
 							</li>
