Clean up div class grouping

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -33,7 +33,7 @@
 	{% include "include/user.html" %}
 
 	<div class="[ row justify-content-center ]">
-		<div class="col-md-8">
+		<div class="[ col-md-8 ]">
 
 			<div class="js-alert [ fixed-top ]"></div>
 
