--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -43,30 +43,30 @@
 
 					<ul class="js-ul_login [ p-0 ]">
 
-						<li class="[ row mb-3 align-items-baseline ]">
-							<div class="[ col-md-3 ]">
+						<li class="[ row mb-3 justify-content-center align-items-baseline ]">
+							<!-- <div class="[ col-md-3 ]">
 								{{ form.username.label }}
-							</div>
-							<div class="[ col-md-9 ]">
+							</div> -->
+							<div class="[ col-md-6 ]">
 								{{ form.username(class="form-control", placeholder=form.username.label.text) }}
 							</div>
 						</li>
 
-						<li class="[ row mb-3 align-items-baseline ]">
-							<div class="[ col-md-3 ]">
+						<li class="[ row mb-3 justify-content-center align-items-baseline ]">
+							<!-- <div class="[ col-md-3 ]">
 								{{ form.password.label }}
-							</div>
-							<div class="[ col-md-9 ]">
+							</div> -->
+							<div class="[ col-md-6 ]">
 								{{ form.password(class="form-control", placeholder=form.password.label.text) }}
 							</div>
 						</li>
 
-						<li class="[ row mb-3 align-items-baseline ]">
-							<div class="[ col-md-3 ]">
-								{{ form.remember.label }}
-							</div>
-							<div class="[ col-md-9 ]">
+						<li class="[ row mb-3 justify-content-center align-items-baseline ]">
+							<div class="[ col-1 offset-md-1 ]">
 								{{ form.remember(class="[ form-control ]") }}
+							</div>
+							<div class="[ col-11 col-md-6 ]">
+								{{ form.remember.label }}
 							</div>
 						</li>
 
