--- a/app/static/css/layout.css
+++ b/app/static/css/layout.css
@@ -64,6 +64,10 @@
 				height: 100%;
 			}
 
+				.site-nav__link-text {
+					border-bottom: 2px solid #b8dd9b;
+				}
+
 
 
 			.site-nav__link:hover a {
