--- a/app/static/css/module-buttons.css
+++ b/app/static/css/module-buttons.css
@@ -22,15 +22,12 @@ add				- blue
 	border-width: 2.5px;
 	border-style: solid;
 	border-radius: 4px;
-/* 	border-color: #bcbdbd;
-	background-color: #fff;
-	color: #58595b; */
 	border-color: #bcbdbd;
 	background-color: #bcbdbd;
 	color: #f8f9fa;
 	font-size: 1.25rem;
 	padding: .25rem 1rem;
-	transition: .2s;
+	transition: .15s;
 }
 
 	.butt a {
@@ -39,13 +36,15 @@ add				- blue
 	}
 
 	.butt:hover {
+		color: #f8f9fa;
 		border-color: #58595b;
+		background-color: #58595b;
 	}
 
 	.butt:active {
-		border-color: #bcbdbd;
-		background-color: #f8f9fa;
-		color: #58595b;
+		border-color: #bcbdbd !important;
+		background-color: #f8f9fa !important;
+		color: #58595b !important;
 	}
 
 
@@ -67,6 +66,7 @@ add				- blue
 	.butt--create:hover {
 		color: #f8f9fa !important;
 		border-color: #88c659 !important;
+		background-color: #88c659 !important;
 	}
 
 	.butt--create:active {
@@ -82,11 +82,13 @@ add				- blue
 	background-color: #f1a69b !important;
 	border-color: #f1a69b !important;
 	color: #f8f9fa;
+	vertical-align: inherit;
 }
 
 	.butt--delete:hover, .butt--delete a:hover {
 		color: #f8f9fa !important;
 		border-color: #e76a58 !important;
+		background-color: #e76a58 !important;
 	}
 
 	.butt--delete:active {
@@ -123,12 +125,13 @@ add				- blue
 .butt--edit {
 	border-color: #ffe491 !important;
 	background-color: #ffe491 !important;
-	color: #8A8F8F !important;
+	color: #f8f9fa !important;
 }
 
 	.butt--edit:hover {
 		border-color: #ffd248 !important;
-		color: #8A8F8F !important;
+		background-color: #ffd248 !important;
+		color: #f8f9fa !important;
 	}
 
 	.butt--edit:active {
@@ -148,6 +151,7 @@ add				- blue
 
 	.butt--add:hover {
 		border-color: #62b5ff;
+		background-color: #62b5ff;
 		color: #f8f9fa;
 	}
 
