--- a/app/templates/park.html
+++ b/app/templates/park.html
@@ -26,8 +26,8 @@
 		{{ form.csrf_token }}
 
 		{% if current_user.is_authenticated %}
-			<div class="[ row justify-content-center py-5 ]">
-				<div class="[ col-md-8 text-right pt-5 pb-4 ]">
+			<div class="[ row justify-content-center ]">
+				<div class="[ col-md-8 text-right py-5 ]">
 					<button id="js-edit_park" class="js-form-edit butt butt--edit" type="button">Edit</button>
 					<a href="{{ url_for('park_delete', id=park.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
 				</div>
