Add form_import_data form

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -20,7 +20,7 @@
 
 	<div class="js-alert [ fixed-top ]"></div>
 
-	<form id="js-form_import" action="{{ url_for('import_file') }}" enctype="multipart/form-data" method="POST">
+	<form id="js-form_import_file" action="{{ url_for('import_file') }}" enctype="multipart/form-data" method="POST">
 		{{ form.hidden_tag() }}
 
 		<section id="section--import-file">
@@ -42,47 +42,60 @@
 				</div>
 			</div>
 
-		</section>
-
-		<section id="section--submit">
 			<div class="[ row justify-content-center ]">
 				<div class="[ col-md-8 py-4 text-right ]">
 					<a id="js-cancel_file" class="butt butt--delete js-cancel-import [ btn btn-sm ]" role="button" href="{{ session['url'] }}">Cancel</a>
 					<button id="js-post_file" class="butt butt--add js-post-import [ ml-2 ]">Import File</button>
 				</div>
 			</div>
+
 		</section>
 
 	</form>
 
-	<section id="section--import-data">
 
-		<div class="[ row justify-content-center d-none ]">
-			<div class="[ col-md-8 text-center ]">
-				<h4 class="[ py-4 ]">Map Data!</h4>
+	<form id="js-form_import_data" action="{{ url_for('import_data') }}" enctype="multipart/form-data" method="POST">
+		{{ form_data.hidden_tag() }}
 
-				<ul class="[ p-0 ]">
+		<section id="section--import-data">
 
-					<li class="[ row mb-3 justify-content-center align-items-baseline ]">
-						<div class="[ col-md-3 ]">
-							{{ form_data.class_object.label(class="form-control") }}
-						</div>
-						<div class="[ col-md-6 ]">
-							{{ form_data.class_object(class="form-control") }}
-						</div>
-					</li>
+			<div id="js-data" class="[ row justify-content-center d-none ]">
+				<div class="[ col-md-8 text-center ]">
+					<h4 class="[ py-4 ]">Map Data!</h4>
 
-				</ul>
+					<ul class="[ p-0 list-unstyled ]">
 
-				<ul class="js-ul_keys [ p-0 ]">
+						<!-- FUTURE: Add hidden form_data.file ref -->
 
-				</ul>
+						<li class="[ row mb-3 justify-content-center align-items-baseline ]">
+							<div class="[ col-md-3 ]">
+								{{ form_data.class_object.label(class="form-control") }}
+							</div>
+							<div class="[ col-md-6 ]">
+								{{ form_data.class_object(class="form-control") }}
+							</div>
+						</li>
+
+					</ul>
+
+					<ul id="js-data_ul" class="[ p-0 list-unstyled d-none ]">
+
+					</ul>
+
+				</div>
+
+				<div class="[ row justify-content-center ]">
+					<div class="[ col-md-8 py-4 text-right ]">
+						<a id="js-cancel_data" class="butt butt--delete js-cancel-import [ btn btn-sm ]" role="button" href="{{ session['url'] }}">Cancel</a>
+						<button id="js-post_data" class="butt butt--add js-post-import [ ml-2 ]">Import Data</button>
+					</div>
+				</div>
 
 			</div>
-		</div>
 
-	</section>
+		</section>
 
+	</form>
 
 </div>
 
@@ -98,9 +111,21 @@
 	</div>
 </script>
 
+<!-- Empty success template -->
+<script id="js-template_success" type="text/template">
+	<div class="bg-green [ alert alert-secondary alert-dismissible fade show mb-0 ]" role="alert">
+		<div class="js-success-body">
+			<h3 class="js-success-message [ text-light text-center ]"></h3>
+		</div>
+		<button type="button" class="[ close ]" data-dismiss="alert" aria-label="Close">
+			<span aria-hidden="true">&times;</span>
+		</button>
+	</div>
+</script>
+
 
 <script id="js-template_keys" type="text/template">
-	{{ form_data.keys(class="form-control ") }}
+	{{ form_data.keys(class="form-control", placeholder="Select a Column") }}
 </script>
 
 <script id="js-template_arrow" type="text/template">
@@ -110,23 +135,23 @@
 </script>
 
 <script id="js-template_artist" type="text/template">
-		{{ form_data.artists(class="form-control ") }}
+		{{ form_data.artists(class="form-control") }}
 </script>
 
 <script id="js-template_artwork" type="text/template">
-		{{ form_data.artworks(class="form-control ") }}
+		{{ form_data.artworks(class="form-control") }}
 </script>
 
 <script id="js-template_park" type="text/template">
-		{{ form_data.parks(class="form-control ") }}
+		{{ form_data.parks(class="form-control") }}
 </script>
 
 <script id="js-template_exhibition" type="text/template">
-		{{ form_data.exhibitions(class="form-control ") }}
+		{{ form_data.exhibitions(class="form-control") }}
 </script>
 
 <script id="js-template_org" type="text/template">
-		{{ form_data.orgs(class="form-control ") }}
+		{{ form_data.orgs(class="form-control") }}
 </script>
 
 {% endblock %}
