--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css?family=Hind:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
     <script src="{{ url_for('static', filename='js/dist/commons.bundle.js') }}"></script>
     <!-- <script src="{{ url_for('static', filename='js/dist/main.bundle.js') }}"></script> -->
 
