Add artworks option to artist SelectField

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -136,6 +136,7 @@
 		<option value="email">Email</option>
 		<option value="phone">Phone</option>
 		<option value="website">Website</option>
+		<option value="artworks">Artwork</option>
 	</select>
 </script>
 
