Add match_existing field to import_data ul

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -70,6 +70,15 @@
 									</div>
 								</li>
 
+								<li class="[ row mb-3 justify-content-center align-items-baseline ]">
+									<div class="[ col-1 ]">
+										{{ form_data.match_existing(class="form-control") }}
+									</div>
+									<div class="[ col-10 col-md-7 text-left ]">
+										{{ form_data.match_existing.label }}
+									</div>
+								</li>
+
 							</ul>
 
 						</div>
