--- a/app/templates/include/nav-links.html
+++ b/app/templates/include/nav-links.html
@@ -16,6 +16,10 @@
 <div class="site-nav__link [ dropdown-item ]">
   <a href="{{ url_for('orgs') }}"><span class="site-nav__link-text">Orgs</span></a>
 </div>
+<div class="dropdown-divider"></div>
+<div class="site-nav__link [ dropdown-item ]">
+  <a href="{{ url_for('import_file') }}"><span class="site-nav__link-text">Import</span></a>
+</div>
 <div class="site-nav__link [ dropdown-item ]">
   <a href="{{ url_for('create') }}"><span class="site-nav__link-text">Create</span></a>
 </div>
