Re-word empty database notifications.

--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -85,7 +85,7 @@
 
 				{% else %}
 
-					<p><i>There are no upcoming exhibitions right now.</i></p>
+					<p><i>There are no upcoming exhibitions.</i></p>
 
 				{% endfor %}
 
@@ -111,7 +111,7 @@
 
 				{% else %}
 
-					<p><i>There are no recent exhibitions right now.</i></p>
+					<p><i>There are no recent exhibitions at this time.</i></p>
 
 				{% endfor %}
 
