--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -96,7 +96,7 @@
 
 				{% else %}
 
-					<p><i>There are no upcoming exhibitions right now.</i></p>
+					<p><i>There are no upcoming exhibitions.</i></p>
 
 				{% endfor %}
 
@@ -122,7 +122,7 @@
 
 				{% else %}
 
-					<p><i>There are no recent exhibitions right now.</i></p>
+					<p><i>There are no recent exhibitions at this time.</i></p>
 
 				{% endfor %}
 
