Tidy up color classes

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -156,76 +156,44 @@ ol li {}
  */
 
 
-.c-red--d {
-  color: #e76a58;
-}
+.c-red--d { color: #e76a58; }
 
-.c-red--l {
-  color: #ec8879;
-}
+.c-red--l { color: #ec8879; }
 
 
-.c-yellow--d {
-  color: #ffd248;
-}
+.c-yellow--d { color: #ffd248; }
 
-.c-yellow--l {
-  color: #ffdb6d;
-}
+.c-yellow--l { color: #ffdb6d; }
 
 
-.c-orange--d {
-  color: #fe8254;
-}
+.c-orange--d { color: #fe8254; }
 
-.c-orange--l {
-  color: #fe9b76;
-}
+.c-orange--l { color: #fe9b76; }
 
 
-.c-purple--d {
-  color: #a174f6;
-}
+.c-purple--d { color: #a174f6; }
 
-.c-purple--l {
-  color: #b490f8;
-}
+.c-purple--l { color: #b490f8; }
 
 
-.c-blue--d {
-  color: #62b5ff;
-}
+.c-blue--d { color: #62b5ff; }
 
-.c-blue--l {
-  color: #81c4ff;
-}
+.c-blue--l { color: #81c4ff; }
 
 
-.c-pink--d {
-  color: #ff7c9e;
-}
+.c-pink--d { color: #ff7c9e; }
 
-.c-pink--l {
-  color: #ff96b1;
-}
+.c-pink--l { color: #ff96b1; }
 
 
-.c-teal--d {
-  color: #51f4ae;
-}
+.c-teal--d { color: #51f4ae; }
 
-.c-teal--l {
-  color: #74f6be;
-}
+.c-teal--l { color: #74f6be; }
 
 
-.c-green--d {
-  color: #88c659;
-}
+.c-green--d { color: #88c659; }
 
-.c-green--l {
-  color: #a0d17a;
-}
+.c-green--l { color: #a0d17a; }
 
 /*
  *
