Increase .site-nav__link font-size for mobile

--- a/app/static/css/layout.css
+++ b/app/static/css/layout.css
@@ -52,6 +52,7 @@
 
 		.site-nav__link {
 			padding: 0;
+			font-size: 3rem;
 		}
 
 			.site-nav__link a {
@@ -100,6 +101,10 @@
 		top: 45px;
 		left: 25px;
 	}
+
+		.site-nav__link {
+			font-size: 1rem;
+		}
 
 }
 
