Replace .dropdown-divider with .pt-4

--- a/app/templates/include/nav-links.html
+++ b/app/templates/include/nav-links.html
@@ -16,7 +16,7 @@
 <div class="site-nav__link [ dropdown-item ]">
   <a href="{{ url_for('orgs') }}"><span class="site-nav__link-text">Orgs</span></a>
 </div>
-<div class="dropdown-divider"></div>
+<div class="[ pt-4 ]"></div>
 <div class="site-nav__link [ dropdown-item ]">
   <a href="{{ url_for('import_file') }}"><span class="site-nav__link-text">Import</span></a>
 </div>
