Add user include to import template

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -17,6 +17,8 @@
 		</div>
 	</section>
 
+	{% include "include/user.html" %}
+
 	<div class="js-alert [ fixed-top ]"></div>
 
 	<section id="section--import-file">
