Add exhibitions, artworks options to park input

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -166,6 +166,8 @@
 		<option value="borough">Borough</option>
 		<option value="address">Address</option>
 		<option value="cb">Community Board</option>
+		<option value="exhibitions">Exhibition</option>
+		<option value="artworks">Artwork</option>
 	</select>
 </script>
 
